outputs/tsp_constructive-constructive/2025-09-19_23-18-06/evaluations/problem_eval1593325808582880809_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric that combines immediate distance with a long-term path potential score, using a sigmoid-based temperature scaling to transition from exploration to exploitation, while incorporating a node centrality measure to prioritize well-connected nodes in the remaining graph.}
                                                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric that combines immediate distance with a long-term path potential score, using a sigmoid-based temperature scaling to transition from exploration to exploitation, while incorporating a node centrality measure to prioritize well-connected nodes in the remaining graph.}
                                                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'
